# Token-Sale-Plutus-Contract

./: Application_Guide.md  README.md  Royalty_Sale_Guide.md  Token_Sale_Guide.md
app/: .gitignore  README.md  manage.py  requirements.txt
app/NFTs/: apps.py  urls.py  views.py
app/NFTs/blockfrost/: api.key
app/NFTs/scripts/: end_royalty_contract.py  end_token_sale_contract.py  helper.py  split_utxo.py  start_royalty_contract.py  start_token_sale_contract.py  transaction.py  update_db.py
app/NFTs/templates/: contracts.html  error.html  index.html  navbar.html  order.html  token.html  wallet.html
app/marketplace/: asgi.py  settings.py  urls.py  wsgi.py
default/token-sale/src/: TokenSale.hs
default_royalty_sale/token-sale-with-royalty/src/: TokenSaleWithRoyalty.hs
default_token_sale/token-sale/src/: TokenSale.hs
example_contract_addition/: README.md
example_contract_addition/a26dbea4b3297aafb28c59772a4ef2964ebffb3375b5de313947e6c8_10000000/: cabal.project
example_contract_addition/a26dbea4b3297aafb28c59772a4ef2964ebffb3375b5de313947e6c8_10000000/token-sale/: token-sale.cabal  token_sale.plutus
example_contract_addition/a26dbea4b3297aafb28c59772a4ef2964ebffb3375b5de313947e6c8_10000000/token-sale/app/: token-sale.hs
example_royalty_sale_addition/: README.md
example_royalty_sale_addition/a26dbea4b3297aafb28c59772a4ef2964ebffb3375b5de313947e6c8_15000000/: artist.vkey
example_royalty_sale_addition/a26dbea4b3297aafb28c59772a4ef2964ebffb3375b5de313947e6c8_15000000/token-sale-with-royalty/: token_sale_with_royalty.plutus
example_royalty_sale_addition/a26dbea4b3297aafb28c59772a4ef2964ebffb3375b5de313947e6c8_15000000/token-sale-with-royalty/app/: token-sale-with-royalty.hs
example_royalty_sale_addition/a26dbea4b3297aafb28c59772a4ef2964ebffb3375b5de313947e6c8_15000000/token-sale-with-royalty/src/: TokenSaleWithRoyalty.hs
example_royalty_sale_addition/d3fb616e18dcb9476f5167ab60b14a6954a14e0ad650cfa864d05d41_35000000/: artist.vkey  cabal.project
example_royalty_sale_addition/d3fb616e18dcb9476f5167ab60b14a6954a14e0ad650cfa864d05d41_35000000/token-sale-with-royalty/: token_sale_with_royalty.plutus
example_royalty_sale_addition/d3fb616e18dcb9476f5167ab60b14a6954a14e0ad650cfa864d05d41_35000000/token-sale-with-royalty/src/: TokenSaleWithRoyalty.hs
example_token_sale_addition/a26dbea4b3297aafb28c59772a4ef2964ebffb3375b5de313947e6c8_10000000/token-sale/src/: TokenSale.hs
example_token_sale_addition/d3fb616e18dcb9476f5167ab60b14a6954a14e0ad650cfa864d05d41_25000000/token-sale/: token_sale.plutus
example_token_sale_addition/d3fb616e18dcb9476f5167ab60b14a6954a14e0ad650cfa864d05d41_25000000/token-sale/src/: TokenSale.hs
example_token_sale_addition/d3fb616e18dcb9476f5167ab60b14a6954a14e0ad650cfa864d05d41_35000000/token-sale/: token_sale.plutus
example_token_sale_addition/d3fb616e18dcb9476f5167ab60b14a6954a14e0ad650cfa864d05d41_35000000/token-sale/src/: TokenSale.hs
pythonscripts/: buyToken.py  sellToken.py  transaction.py
royalty_sale_contracts/: README.md
royalty_sale_contracts/977049f2572c679ce41b8b5e91f87e4267578e46cfe9f0830d10f12c_35000000/: artist.vkey
royalty_sale_contracts/977049f2572c679ce41b8b5e91f87e4267578e46cfe9f0830d10f12c_35000000/token-sale-with-royalty/: token-sale-with-royalty.cabal  token_sale_with_royalty.plutus
royalty_sale_contracts/977049f2572c679ce41b8b5e91f87e4267578e46cfe9f0830d10f12c_35000000/token-sale-with-royalty/src/: TokenSaleWithRoyalty.hs
scripts/: README.md  end_royalty_contract.py  end_token_sale_contract.py  split_utxo.py  start_royalty_contract.py  start_token_sale_contract.py  transaction.py
token_sale_contracts/: README.md
token_sale_contracts/977049f2572c679ce41b8b5e91f87e4267578e46cfe9f0830d10f12c_100000000/token-sale/: token_sale.plutus
token_sale_contracts/977049f2572c679ce41b8b5e91f87e4267578e46cfe9f0830d10f12c_25000000/: payment.vkey
token_sale_contracts/977049f2572c679ce41b8b5e91f87e4267578e46cfe9f0830d10f12c_25000000/token-sale/: token_sale.plutus
tokensale-smartcontract/: cabal.project  token-sale.cabal
tokensale-smartcontract/app/: token-sale.hs
tokensale-smartcontract/src/: TokenSale.hs
(+2 files in other folders)
